# kcodecs

./: .git-blame-ignore-revs  .gitattributes  .gitlab-ci.yml  .kde-ci.yml  .reviewboardrc  CMakeLists.txt  KF5CodecsConfig.cmake.in  KF6CodecsConfig.cmake.in  README.md  conanfile.py  metainfo.yaml  test-cppcheck.xml
autotests/: CMakeLists.txt  base64benchmark.cpp  codectest.cpp  codectest.h  kcharsetstest.cpp  kcharsetstest.h  kcodecstest.cpp  kcodecstest.h  kemailaddresstest.cpp  kemailaddresstest.h  kencodingprobertest.cpp  kencodingprobertest.h  kencodingproberunittest.cpp  kusasciitextcodectest.cpp  pythontest.py  rfc2047test.cpp  rfc2047test.h
autotests/ossfuzz/: CMakeLists.txt  README.md  build_fuzzers.sh  kcodecs_fuzzer.cc  prepare_build.sh
cmake/: rules_PyKF5.py
po/af/: kcodecs5_qt.po
po/ar/: kcodecs5_qt.po
po/as/: kcodecs5_qt.po
po/ast/: kcodecs5_qt.po
po/az/: kcodecs5_qt.po
po/be/: kcodecs5_qt.po
po/be@latin/: kcodecs5_qt.po
po/bg/: kcodecs5_qt.po
po/bn/: kcodecs5_qt.po
po/bn_IN/: kcodecs5_qt.po
po/br/: kcodecs5_qt.po
po/bs/: kcodecs5_qt.po
po/ca/: kcodecs5_qt.po
po/ca@valencia/: kcodecs5_qt.po
po/crh/: kcodecs5_qt.po
po/cs/: kcodecs5_qt.po
po/csb/: kcodecs5_qt.po
po/cy/: kcodecs5_qt.po
po/da/: kcodecs5_qt.po
po/de/: kcodecs5_qt.po
po/el/: kcodecs5_qt.po
po/en_GB/: kcodecs5_qt.po
po/eo/: kcodecs5_qt.po
po/es/: kcodecs5_qt.po
po/et/: kcodecs5_qt.po
po/eu/: kcodecs5_qt.po
po/fa/: kcodecs5_qt.po
po/fi/: kcodecs5_qt.po
po/fr/: kcodecs5_qt.po
po/fy/: kcodecs5_qt.po
po/ga/: kcodecs5_qt.po
po/gd/: kcodecs5_qt.po
po/gl/: kcodecs5_qt.po
po/gu/: kcodecs5_qt.po
po/ha/: kcodecs5_qt.po
po/he/: kcodecs5_qt.po
po/hi/: kcodecs5_qt.po
po/hne/: kcodecs5_qt.po
po/hr/: kcodecs5_qt.po
po/hsb/: kcodecs5_qt.po
po/hu/: kcodecs5_qt.po
po/hy/: kcodecs5_qt.po
po/ia/: kcodecs5_qt.po
po/id/: kcodecs5_qt.po
po/is/: kcodecs5_qt.po
po/it/: kcodecs5_qt.po
po/ja/: kcodecs5_qt.po
po/ka/: kcodecs5_qt.po
po/kk/: kcodecs5_qt.po
po/km/: kcodecs5_qt.po
po/kn/: kcodecs5_qt.po
po/ko/: kcodecs5_qt.po
po/ku/: kcodecs5_qt.po
po/lb/: kcodecs5_qt.po
po/lt/: kcodecs5_qt.po
po/lv/: kcodecs5_qt.po
po/mai/: kcodecs5_qt.po
po/mk/: kcodecs5_qt.po
po/ml/: kcodecs5_qt.po
po/mr/: kcodecs5_qt.po
po/ms/: kcodecs5_qt.po
po/nb/: kcodecs5_qt.po
po/nds/: kcodecs5_qt.po
po/ne/: kcodecs5_qt.po
po/nl/: kcodecs5_qt.po
po/nn/: kcodecs5_qt.po
po/oc/: kcodecs5_qt.po
po/or/: kcodecs5_qt.po
po/pa/: kcodecs5_qt.po
po/pl/: kcodecs5_qt.po
po/ps/: kcodecs5_qt.po
po/pt/: kcodecs5_qt.po
po/pt_BR/: kcodecs5_qt.po
po/ro/: kcodecs5_qt.po
po/ru/: kcodecs5_qt.po
po/se/: kcodecs5_qt.po
po/si/: kcodecs5_qt.po
po/sk/: kcodecs5_qt.po
po/sl/: kcodecs5_qt.po
po/sq/: kcodecs5_qt.po
po/sr/: kcodecs5_qt.po
po/sr@ijekavian/: kcodecs5_qt.po
po/sr@ijekavianlatin/: kcodecs5_qt.po
po/sr@latin/: kcodecs5_qt.po
po/sv/: kcodecs5_qt.po
po/ta/: kcodecs5_qt.po
po/te/: kcodecs5_qt.po
po/tg/: kcodecs5_qt.po
po/th/: kcodecs5_qt.po
po/tr/: kcodecs5_qt.po
po/tt/: kcodecs5_qt.po
po/ug/: kcodecs5_qt.po
po/uk/: kcodecs5_qt.po
po/uz/: kcodecs5_qt.po
po/uz@cyrillic/: kcodecs5_qt.po
po/vi/: kcodecs5_qt.po
po/wa/: kcodecs5_qt.po
po/x-test/: kcodecs5_qt.po
po/xh/: kcodecs5_qt.po
po/zh_CN/: kcodecs5_qt.po
po/zh_HK/: kcodecs5_qt.po
po/zh_TW/: kcodecs5_qt.po
poqm/af/: kcodecs5_qt.po  kcodecs6_qt.po
poqm/ar/: kcodecs5_qt.po  kcodecs6_qt.po
poqm/as/: kcodecs5_qt.po  kcodecs6_qt.po
poqm/ast/: kcodecs6_qt.po
poqm/az/: kcodecs5_qt.po  kcodecs6_qt.po
poqm/be/: kcodecs5_qt.po  kcodecs6_qt.po
poqm/be@latin/: kcodecs5_qt.po  kcodecs6_qt.po
poqm/bg/: kcodecs5_qt.po  kcodecs6_qt.po
poqm/bn/: kcodecs5_qt.po  kcodecs6_qt.po
poqm/bn_IN/: kcodecs5_qt.po  kcodecs6_qt.po
poqm/br/: kcodecs5_qt.po  kcodecs6_qt.po
poqm/bs/: kcodecs5_qt.po  kcodecs6_qt.po
poqm/ca/: kcodecs5_qt.po  kcodecs6_qt.po
poqm/ca@valencia/: kcodecs5_qt.po  kcodecs6_qt.po
poqm/crh/: kcodecs5_qt.po  kcodecs6_qt.po
poqm/cs/: kcodecs5_qt.po  kcodecs6_qt.po
poqm/csb/: kcodecs5_qt.po  kcodecs6_qt.po
poqm/cy/: kcodecs5_qt.po  kcodecs6_qt.po
poqm/da/: kcodecs5_qt.po  kcodecs6_qt.po
poqm/de/: kcodecs5_qt.po  kcodecs6_qt.po
poqm/el/: kcodecs5_qt.po  kcodecs6_qt.po
poqm/en_GB/: kcodecs5_qt.po  kcodecs6_qt.po
poqm/eo/: kcodecs5_qt.po  kcodecs6_qt.po
poqm/es/: kcodecs5_qt.po  kcodecs6_qt.po
poqm/et/: kcodecs5_qt.po  kcodecs6_qt.po
poqm/eu/: kcodecs5_qt.po  kcodecs6_qt.po
poqm/fa/: kcodecs5_qt.po  kcodecs6_qt.po
poqm/fi/: kcodecs5_qt.po  kcodecs6_qt.po
poqm/fr/: kcodecs5_qt.po  kcodecs6_qt.po
poqm/fy/: kcodecs5_qt.po  kcodecs6_qt.po
poqm/ga/: kcodecs5_qt.po  kcodecs6_qt.po
poqm/gd/: kcodecs5_qt.po  (+1 more)
src/: CMakeLists.txt  Messages.sh  kcharsets.cpp  kcharsets.h  kcharsets_p.h  kcodecs-index.qdoc  kcodecs.cpp  kcodecs.h  kcodecs.qdoc  kcodecs.qdocconf  kcodecs_p.h  kcodecsbase45.cpp  kcodecsbase64.cpp  kcodecsbase64.h  kcodecsidentity.cpp  kcodecsidentity.h  kcodecsqp.cpp  kcodecsqp.h  kcodecsuuencode.cpp  kcodecsuuencode.h  kemailaddress.cpp  kemailaddress.h  kencodingprober.cpp  kencodingprober.h  kencodingprober_p.h  kentities.c  kentities.h  kusasciitextcodec.cpp  kusasciitextcodec.h
src/probers/: CharDistribution.cpp  CharDistribution.h  ChineseGroupProber.cpp  ChineseGroupProber.h  JapaneseGroupProber.cpp  JapaneseGroupProber.h  JpCntx.cpp  JpCntx.h  LangBulgarianModel.cpp  LangCyrillicModel.cpp  LangGreekModel.cpp  LangHebrewModel.cpp  LangHungarianModel.cpp  LangThaiModel.cpp  UnicodeGroupProber.cpp  UnicodeGroupProber.h  ctype_test_p.h  nsBig5Prober.cpp  nsBig5Prober.h  nsCharSetProber.cpp  nsCharSetProber.h  nsCodingStateMachine.h  nsEUCJPProber.cpp  nsEUCJPProber.h  nsEUCKRProber.cpp  nsEUCKRProber.h  nsEUCTWProber.cpp  nsEUCTWProber.h  nsEscCharsetProber.cpp  nsEscCharsetProber.h  nsEscSM.cpp  nsEscSM.h  nsGB2312Prober.cpp  nsGB2312Prober.h  nsHebrewProber.cpp  nsHebrewProber.h  nsLatin1Prober.cpp  nsLatin1Prober.h  nsMBCSGroupProber.cpp  nsMBCSGroupProber.h  (+13 more)
(+165 files in other folders)
